Fallback to non-verified connection when SSLContext is not available
For example on Python <2.7.9

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -37,18 +37,26 @@
                         <!--#if $have_ssl#--> 
                             $ssl_version &nbsp; [$ssl_protocols]
                         <!--#else#-->
-                            <span class="label label-warning">$T('notAvailable')</span>
+                            <span class="label label-danger">$T('notAvailable')</span>
                             <a href="$helpuri$help_uri#no_ssl" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                         <!--#end if#-->
                     </td>
                 </tr>
+                <!--#if not $have_ssl_context#--> 
+                <tr>
+                    <th scope="row"></th>
+                    <td>
+                        <span class="label label-danger">$T('warning')</span> $T('explain-nosslcontext')
+                    </td>
+                </tr>
+                <!--#end if#-->
                 <tr>
                     <th scope="row">yEnc:</th>
                     <td>
                         <!--#if $have_yenc#--> 
                             <span class="glyphicon glyphicon-ok"></span>
                         <!--#else#-->
-                            <span class="label label-warning">$T('notAvailable')</span>
+                            <span class="label label-danger">$T('notAvailable')</span>
                             <a href="$helpuri$help_uri#no_yenc" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                         <!--#end if#-->
                     </td>
