--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -25,9 +25,9 @@
                         </select>
                         <span class="desc">$T('explain-check_new_rel')</span>
                     </div>
-                    <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
+                    <div class="field-pair <!--#if int($have_ssl_context) == 0 then "disabled" else ""#-->">
                         <label class="config" for="enable_https_verification">$T('opt-enable_https_verification')</label>
-                        <input type="checkbox" name="enable_https_verification" id="enable_https_verification" value="1" <!--#if int($enable_https_verification) > 0 then 'checked="checked"' else ""#--> <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
+                        <input type="checkbox" name="enable_https_verification" id="enable_https_verification" value="1" <!--#if int($enable_https_verification) > 0 then 'checked="checked"' else ""#--> <!--#if int($have_ssl_context) == 0 then "disabled=\"disabled\"" else ""#--> />
                         <span class="desc">$T('explain-enable_https_verification')</span>
                     </div>
                     <div class="field-pair">
@@ -52,9 +52,9 @@
                         </select>
                         <span class="desc">$T('explain-load_balancing')</span>
                     </div>
-                    <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
+                    <div class="field-pair <!--#if int($have_ssl_context) == 0 then "disabled" else ""#-->">
                         <label class="config" for="enable_nntps_verification">$T('opt-enable_nntps_verification')</label>
-                        <select name="enable_nntps_verification" id="enable_nntps_verification" <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#-->>
+                        <select name="enable_nntps_verification" id="enable_nntps_verification" <!--#if int($have_ssl_context) == 0 then "disabled=\"disabled\"" else ""#-->>
                               <option value="0" <!--#if $enable_nntps_verification == 0 then 'selected="selected"' else ""#--> >$T('nntps_verification-disabled')</option>
                               <option value="1" <!--#if $enable_nntps_verification == 1 then 'selected="selected"' else ""#--> >$T('nntps_verification-normal')</option>
                               <option value="2" <!--#if $enable_nntps_verification == 2 then 'selected="selected"' else ""#--> >$T('nntps_verification-strict')</option>
