--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -501,7 +501,8 @@ h2.activeRSS {
     height: 16px;
     width: 16px;
     float: left;
-    margin-right: 2px;
+    margin: 0 6px 0 2px;
+    text-align: center;
 }
 .feed {
     text-decoration: none;
