--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -59,6 +59,15 @@
                     <input type="checkbox" name="ssl" id="ssl" value="1" <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
                     <span class="desc">$T('srv-ssl')</span>
                 </div>
+                <div class="field-pair <!--#if int($have_ssl_context) == 0 then "disabled" else ""#-->">
+                    <label class="config" for="ssl_verify">$T('opt-ssl_verify')</label>
+                    <select name="ssl_verify" id="ssl_verify" <!--#if int($have_ssl_context) == 0 then "disabled=\"disabled\"" else ""#-->>
+                          <option value="0">$T('ssl_verify-disabled')</option>
+                          <option value="1" selected>$T('ssl_verify-normal')</option>
+                          <option value="2">$T('ssl_verify-strict')</option>
+                    </select>
+                    <span class="desc">$T('explain-ssl_verify').replace('. ', '.<br/>')</span>
+                </div>
                 <div class="field-pair">
                     <label class="config" for="send_group">$T('srv-send_group')</label>
                     <input type="checkbox" name="send_group" id="send_group" value="1" />
@@ -163,6 +172,15 @@
                     <label class="config" for="ssl$cur">$T('srv-ssl')</label>
                     <input type="checkbox" name="ssl" id="ssl$cur" value="1" <!--#if int($server['ssl']) != 0 and int($have_ssl) == 1 then 'checked="checked"' else ""#--> <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
                     <span class="desc">$T('srv-ssl')</span>
+                </div>
+                <div class="field-pair <!--#if int($have_ssl_context) == 0 then "disabled" else ""#-->">
+                    <label class="config" for="ssl_verify$cur">$T('opt-ssl_verify')</label>
+                    <select name="ssl_verify" id="ssl_verify$cur" <!--#if int($have_ssl_context) == 0 then "disabled=\"disabled\"" else ""#-->>
+                          <option value="0" <!--#if $server['ssl_verify'] == 0 then 'selected="selected"' else ""#--> >$T('ssl_verify-disabled')</option>
+                          <option value="1" <!--#if $server['ssl_verify'] == 1 then 'selected="selected"' else ""#--> >$T('ssl_verify-normal')</option>
+                          <option value="2" <!--#if $server['ssl_verify'] == 2 then 'selected="selected"' else ""#--> >$T('ssl_verify-strict')</option>
+                    </select>
+                    <span class="desc">$T('explain-ssl_verify').replace('. ', '.<br/>')</span>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="optional$cur">$T('srv-optional')</label>
