--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -23,6 +23,7 @@ nav .btn {
 
 a, a:active, a:hover, a:focus,
 .hover-button.glyphicon-play,
+.hover-button.glyphicon-stop,
 .dropdown-menu>li>a,
 legend, 
 #modal-options legend label, 
