Move SSL Ciphers option to Switches page
People should know it's possible. We put the explenation on the Wiki!

--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -52,6 +52,11 @@
                         </select>
                         <span class="desc">$T('explain-load_balancing')</span>
                     </div>
+                    <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
+                        <label class="config" for="ssl_ciphers">$T('opt-ssl_ciphers')</label>
+                        <input type="text" name="ssl_ciphers" id="ssl_ciphers" value="$ssl_ciphers"<!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
+                        <span class="desc">$T('explain-ssl_ciphers') <br>$T('readwiki')</span>
+                    </div>
                     <div class="field-pair">
                         <label class="config" for="max_art_tries">$T('opt-max_art_tries')</label>
                         <input type="number" name="max_art_tries" id="max_art_tries" value="$max_art_tries" min="2" max="2000" />
