--- a/interfaces/Config/templates/config_cat.tmpl
+++ b/interfaces/Config/templates/config_cat.tmpl
@@ -7,15 +7,16 @@
             <p> $T('explain-catTags') $T('explain-catTags2')<br/> </p>
             <h5 class="darkred"><strong>$T('explain-relFolder'):</strong> <span class="path">$defdir</span></h5>
 
-            <!--#set $odd = False#-->
             <!--#set $cur = 0#-->
             <!--#for $slot in $slotinfo#-->
-                <!--#set $odd = not $odd#-->
                 <!--#set $cur = $cur+1#-->
-                <form action="save" method="get">
+                <!--#set $cansort = $slot.name != '*' and $slot.name != ''#-->
+
+                <form action="save" method="get" <!--#if $cansort#-->class="sorting-row"<!--#end if#-->>
                     <table class="catTable">
                         <!--#if $cur == 1#-->
                         <tr>
+                            <th></th>
                             <th>$T('category')</th>
                             <th>$T('priority')</th>
                             <th>$T('mode')</th>
@@ -27,9 +28,13 @@
                             <th>&nbsp;</th>
                         </tr>
                         <!--#end if#-->
-                        <tr class="<!--#if $odd then " alt " else " "#-->" <!--#if $slot.name=='*' #-->style="background-color: #FFFFE0;"<!--#end if#-->>
+                        <tr>
+                            <td>
+                                <span class="glyphicon glyphicon-option-vertical"></span>
+                            </td>
                             <td>
                                 <input type="hidden" name="session" value="$session" />
+                                <input type="hidden" name="order" value="$slot.order" />
                                 <input type="hidden" value="$slot.name" name="name" />
                                 <!--#if $slot.name != '*'#-->
                                 <input type="text" name="newname" value="$slot.name" size="10" />
@@ -90,10 +95,14 @@
                         </tr>
                     </table>
                 </form>
+                <!--#if not $cansort#-->
+                <hr>
+                <!--#end if#-->
             <!--#end for#-->
         </div>
     </div>
 </div>
+<script type="text/javascript" src="${root}staticcfg/js/jquery-ui.min.js"></script>
 <script type="text/javascript">
     \$(document).ready(function() {
         \$('.delCat').click(function() {
@@ -103,6 +112,30 @@
 
         // Add autocomplete and file-browser
         \$('.fileBrowserSmall').typeahead().fileBrowser();
+
+        // Make categories sortable
+        \$('.padTable').sortable({
+            items: '.sorting-row',
+            containment: '.colmask',
+            axis: 'y',
+            update: function(event, ui) {
+                \$('.Categories form.sorting-row').each(function(index, elm) {
+                    // Update order of all elements
+                    if(index != elm.order.value) {
+                        elm.order.value = index
+                        // Submit changed order
+                        var data = {}
+                        \$(elm).extractFormDataTo(data);
+                        \$.ajax({
+                            type: "GET",
+                            url: window.location.pathname + 'save',
+                            data: data,
+                            async: false // To prevent race-conditions when updating categories
+                        })
+                    }
+                })
+            }
+        })
     });
 </script>
 
